back funcionando bd

--- a/src/myfood/back_novo/src/main/resources/application.properties
+++ b/src/myfood/back_novo/src/main/resources/application.properties
@@ -1,9 +1,13 @@
 spring.application.name=myfoodback
 
+spring.datasource.url=jdbc:postgresql://database-1.cnsgegmma75q.us-east-1.rds.amazonaws.com:5432/database-1
+spring.datasource.username=postgres
+spring.datasource.password=Oo12345678
+spring.datasource.driver-class-name=org.postgresql.Driver
+
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-spring.datasource.url=${DATABASE_URL}
-spring.datasource.username=${DATABASE_USERNAME}
-spring.datasource.password=${DATABASE_PASSWORD}
-spring.jpa.generate-ddl=true
-spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+spring.jpa.generate-ddl=true
+# Hibernate ddl auto (create, create-drop, update): with "create-drop" the database
+# schema will be automatically created afresh for every start of application
+spring.jpa.hibernate.ddl-auto=create-drop
