--- a/src/myfood/back_novo/src/main/resources/application.properties
+++ b/src/myfood/back_novo/src/main/resources/application.properties
@@ -1,8 +1,8 @@
-spring.application.name=myfoodback
+spring.application.name=demo
 
-spring.datasource.url=jdbc:postgresql://database-1.cnsgegmma75q.us-east-1.rds.amazonaws.com:5432/database-1
-spring.datasource.username=postgres
-spring.datasource.password=Oo12345678
+spring.datasource.url=${DATABASE_URL}
+spring.datasource.username=${DATABASE_USERNAME}
+spring.datasource.password=${DATABASE_PASSWORD}
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
