--- a/src/myfood/back_novo/src/main/resources/application.properties
+++ b/src/myfood/back_novo/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.application.name=demo
+spring.application.name=myfood
 
 spring.datasource.url=${DATABASE_URL}
 spring.datasource.username=${DATABASE_USERNAME}
@@ -10,4 +10,4 @@ spring.jpa.show-sql=true
 spring.jpa.generate-ddl=true
 # Hibernate ddl auto (create, create-drop, update): with "create-drop" the database
 # schema will be automatically created afresh for every start of application
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=create-update
