--- a/src/myfood/back_novo/src/main/resources/application.properties
+++ b/src/myfood/back_novo/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.application.name=myfood
+spring.application.name=demo
 
 spring.datasource.url=${DATABASE_URL}
 spring.datasource.username=${DATABASE_USERNAME}
@@ -8,6 +8,4 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.show-sql=true
 spring.jpa.generate-ddl=true
-# Hibernate ddl auto (create, create-drop, update): with "create-drop" the database
-# schema will be automatically created afresh for every start of application
 spring.jpa.hibernate.ddl-auto=create-update
